--- a/index.html
+++ b/index.html
@@ -1,7 +1,90 @@
 <!DOCTYPE html>
-<html>
-<body>
-<h1>Bernardo Hernandez</h1>
-<p>under construction...</p>
-</body>
+<html lang="es_MX" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./img/logo.png" />
+    <title>Bernardo Hernandez</title>
+    <link rel="stylesheet" href="./css/master.css">
+    <link rel="stylesheet" href="./css/grid_flex.css">
+    <link rel="stylesheet" href="./css/index.css">
+    <!--
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,800" rel="stylesheet">
+    <a href="#"></a>
+    <ul></ul>
+    <table>
+    <img src="" alt="">
+    <video src="videofile.ogg" autoplay poster="posterimage.jpg">
+    !<audio src=""></audio>
+    -->
+
+  </head>
+  <body>
+    <header>
+      <nav id="myTopnav">
+        <ul>
+          <li><a href="./index.html">Home</a></li>
+          <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+            <img width="15px" height="15px" src="./img/icon.png" alt="">
+          </a>
+          <span>
+            <li><a href="./QuienSoy.html">QuienSoy</a></li>
+            <li><a href="./animacion.html">animacion</a></li>
+            <li><a href="./comics.html">comics</a></li>
+            <li><a href="./horario.html">horario</a></li>
+          </span>
+          <span></span>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section>
+        <article class="jumbotron art1">
+          <h1>Bernardo <br> Hernandez</h1>
+          <a class="unsplash" href="https://unsplash.com/@nkachanovskyyy?utm_medium=referral&amp;utm_campaign=photographer-credit&amp;utm_content=creditBadge" target="_blank" rel="noopener noreferrer" title="Download free do whatever you want high-resolution photos from Nikita Kachanovsky"><span style="display:inline-block;padding:2px 3px"><svg xmlns="http://www.w3.org/2000/svg" style="height:12px;width:auto;position:relative;vertical-align:middle;top:-1px;fill:white" viewBox="0 0 32 32"><title>unsplash-logo</title><path d="M20.8 18.1c0 2.7-2.2 4.8-4.8 4.8s-4.8-2.1-4.8-4.8c0-2.7 2.2-4.8 4.8-4.8 2.7.1 4.8 2.2 4.8 4.8zm11.2-7.4v14.9c0 2.3-1.9 4.3-4.3 4.3h-23.4c-2.4 0-4.3-1.9-4.3-4.3v-15c0-2.3 1.9-4.3 4.3-4.3h3.7l.8-2.3c.4-1.1 1.7-2 2.9-2h8.6c1.2 0 2.5.9 2.9 2l.8 2.4h3.7c2.4 0 4.3 1.9 4.3 4.3zm-8.6 7.5c0-4.1-3.3-7.5-7.5-7.5-4.1 0-7.5 3.4-7.5 7.5s3.3 7.5 7.5 7.5c4.2-.1 7.5-3.4 7.5-7.5z"></path></svg></span><span style="display:inline-block;padding:2px 3px">Nikita Kachanovsky</span></a>
+        </article>
+        <article class="jumbotron art2">
+          <h2>QuienSoy</h2>
+          <p>Soy Bernardo Hernandez Hernandez, un joven mexicano de 18 a&ntilde;os y actualmente estudiante de la Universidad Aut&oacute;noma de San Luis Potos&iacute;.</p>
+          <a class="ibutton" href="./QuienSoy.html">ver mas</a>
+          <a class="unsplash" href="https://unsplash.com/@bekmanis?utm_medium=referral&amp;utm_campaign=photographer-credit&amp;utm_content=creditBadge" target="_blank" rel="noopener noreferrer" title="Download free do whatever you want high-resolution photos from Elvis Bekmanis"><span style="display:inline-block;padding:2px 3px"><svg xmlns="http://www.w3.org/2000/svg" style="height:12px;width:auto;position:relative;vertical-align:middle;top:-1px;fill:white" viewBox="0 0 32 32"><title>unsplash-logo</title> <path d="M20.8 18.1c0 2.7-2.2 4.8-4.8 4.8s-4.8-2.1-4.8-4.8c0-2.7 2.2-4.8 4.8-4.8 2.7.1 4.8 2.2 4.8 4.8zm11.2-7.4v14.9c0 2.3-1.9 4.3-4.3 4.3h-23.4c-2.4 0-4.3-1.9-4.3-4.3v-15c0-2.3 1.9-4.3 4.3-4.3h3.7l.8-2.3c.4-1.1 1.7-2 2.9-2h8.6c1.2 0 2.5.9 2.9 2l.8 2.4h3.7c2.4 0 4.3 1.9 4.3 4.3zm-8.6 7.5c0-4.1-3.3-7.5-7.5-7.5-4.1 0-7.5 3.4-7.5 7.5s3.3 7.5 7.5 7.5c4.2-.1 7.5-3.4 7.5-7.5z"></path></svg></span><span style="display:inline-block;padding:2px 3px">Elvis Bekmanis</span></a>
+        </article>
+        <article class="jumbotron art3">
+          <h2>animacion</h2>
+          <p>Soy Bernardo Hernandez Hernandez, un joven mexicano de 18 a&ntilde;os y actualmente estudiante de la Universidad Aut&oacute;noma de San Luis Potos&iacute;.</p>
+          <a class="ibutton" href="./animacion.html">ver mas</a>
+          <a class="unsplash" href="https://unsplash.com/@steveroe_?utm_medium=referral&amp;utm_campaign=photographer-credit&amp;utm_content=creditBadge" target="_blank" rel="noopener noreferrer" title="Download free do whatever you want high-resolution photos from Steven Roe"><span style="display:inline-block;padding:2px 3px"><svg xmlns="http://www.w3.org/2000/svg" style="height:12px;width:auto;position:relative;vertical-align:middle;top:-1px;fill:white" viewBox="0 0 32 32"><title>unsplash-logo</title><path d="M20.8 18.1c0 2.7-2.2 4.8-4.8 4.8s-4.8-2.1-4.8-4.8c0-2.7 2.2-4.8 4.8-4.8 2.7.1 4.8 2.2 4.8 4.8zm11.2-7.4v14.9c0 2.3-1.9 4.3-4.3 4.3h-23.4c-2.4 0-4.3-1.9-4.3-4.3v-15c0-2.3 1.9-4.3 4.3-4.3h3.7l.8-2.3c.4-1.1 1.7-2 2.9-2h8.6c1.2 0 2.5.9 2.9 2l.8 2.4h3.7c2.4 0 4.3 1.9 4.3 4.3zm-8.6 7.5c0-4.1-3.3-7.5-7.5-7.5-4.1 0-7.5 3.4-7.5 7.5s3.3 7.5 7.5 7.5c4.2-.1 7.5-3.4 7.5-7.5z"></path></svg></span><span style="display:inline-block;padding:2px 3px">Steven Roe</span></a>
+          <!---->
+        </article>
+        <article class="jumbotron art4">
+          <h2>comics</h2>
+          <a class="ibutton" href="./comics.html">ver mas</a>
+          <a class="unsplash" href="https://unsplash.com/@miikalaaksonen?utm_medium=referral&amp;utm_campaign=photographer-credit&amp;utm_content=creditBadge" target="_blank" rel="noopener noreferrer" title="Download free do whatever you want high-resolution photos from Miika Laaksonen"><span style="display:inline-block;padding:2px 3px"><svg xmlns="http://www.w3.org/2000/svg" style="height:12px;width:auto;position:relative;vertical-align:middle;top:-1px;fill:white" viewBox="0 0 32 32"><title>unsplash-logo</title><path d="M20.8 18.1c0 2.7-2.2 4.8-4.8 4.8s-4.8-2.1-4.8-4.8c0-2.7 2.2-4.8 4.8-4.8 2.7.1 4.8 2.2 4.8 4.8zm11.2-7.4v14.9c0 2.3-1.9 4.3-4.3 4.3h-23.4c-2.4 0-4.3-1.9-4.3-4.3v-15c0-2.3 1.9-4.3 4.3-4.3h3.7l.8-2.3c.4-1.1 1.7-2 2.9-2h8.6c1.2 0 2.5.9 2.9 2l.8 2.4h3.7c2.4 0 4.3 1.9 4.3 4.3zm-8.6 7.5c0-4.1-3.3-7.5-7.5-7.5-4.1 0-7.5 3.4-7.5 7.5s3.3 7.5 7.5 7.5c4.2-.1 7.5-3.4 7.5-7.5z"></path></svg></span><span style="display:inline-block;padding:2px 3px">Miika Laaksonen</span></a>
+        </article>
+      </section>
+    </main>
+    <footer>
+      <a href="mailto:Bhdzhdz@gmail.com?subject=feedback">Bhdzhdz@gmail.com</a>
+    </footer>
+  </body>
+  <script type="text/javascript">
+function myFunction() {
+    var x = document.getElementById("myTopnav");
+    if (x.className === "") {
+        x.className += " responsive";
+    } else {
+        x.className = "";
+    }
+}
+</script>
+  <script type="text/javascript">
+  function myFunction() {
+      var x = document.getElementById("myTopnav");
+      if (x.className === "") {
+          x.className += " responsive";
+      } else {
+          x.className = "";
+      }
+  }
+  </script>
 </html>
